--- a/.gitmessage.example
+++ b/.gitmessage.example
@@ -1,3 +1,6 @@
+:emoji:
+
+
 # ==================== Emojis ====================
 # 🔧  :update: 機能追加、更新(update)
 # 🐛  :fix: バグ修正（fix)
@@ -8,4 +11,3 @@
 # :emoji: Subject
 #
 # Commit body...
-
