:bug: 絵文字バグの修正

--- a/.gitmessage.txt.example
+++ b/.gitmessage.txt.example
@@ -2,9 +2,9 @@
 
 
 # ==================== Emojis ====================
-# 🔧  :update: 機能追加、更新(update)
-# 🐛  :fix: バグ修正（fix)
-# ♻️  :refactoring: リファクタリング(refactoring)
+# 🔧  :wrench: 機能追加、更新(update)
+# 🐛  :bug: バグ修正（fix)
+# ♻️  :recycle: リファクタリング(refactoring)
 # 📝  :memo: メモ(memo)
 
 # ==================== Format ====================
